# asgiref

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.txt  MANIFEST.in  Makefile  README.rst  asgi_inmemory.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
asgiref/: __init__.py  _asyncio.py  _context.py  _pep562.py  _trio.py  applications.py  base_layer.py  benchmark.py  compatibility.py  conformance.py  conformance_async.py  consumers.py  current_thread_executor.py  inmemory.py  inmemory_async.py  local.py  server.py  sync.py  sync_iter.py  sync_to_async.py  testing.py  timeout.py  typing.py  worker.py  wsgi.py
asgiref/tests/: test_base_layer.py  test_inmemory.py  test_wsgi.py
docs/: Makefile  conf.py  extensions.rst  implementations.rst  index.rst  introduction.rst
docs/specs/: index.rst  lifespan.rst  main.rst  tls.rst  www.rst
specs/: asgi.rst  lifespan.rst  tls.rst  www.rst
tests/: test_benchmark_local.py  test_compatibility.py  test_deprecated_types.py  test_garbage_collection.py  test_local.py  test_server.py  test_stopped_main_event_loop.py  test_sync.py  test_sync_contextvars.py  test_sync_types.yml  test_testing.py  test_typing.yml  test_wsgi.py
