[metadata]
name = asgiref
version = attr: asgiref.__version__
url = https://github.com/django/asgiref/
author = Django Software Foundation
author_email = foundation@djangoproject.com
description = ASGI specs, helper code, and adapters
long_description = file: README.rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
project_urls =
    Documentation = https://asgi.readthedocs.io/
    Further Documentation = https://docs.djangoproject.com/en/stable/topics/async/#async-adapter-functions
    Changelog = https://github.com/django/asgiref/blob/master/CHANGELOG.txt

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.extras_require]
tests =
    pytest
    pytest-asyncio

[tool:pytest]
testpaths = tests

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119
