[metadata]
name = asgiref
version = attr: asgiref.__version__
url = https://github.com/django/asgiref/
author = Django Software Foundation
author_email = foundation@djangoproject.com
description = ASGI specs, helper code, and adapters
long_description = file: README.rst
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
project_urls =
    Documentation = https://asgi.readthedocs.io/
    Further Documentation = https://docs.djangoproject.com/en/stable/topics/async/#async-adapter-functions
    Changelog = https://github.com/django/asgiref/blob/master/CHANGELOG.txt

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    typing_extensions; python_version < "3.8"
zip_safe = false

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    mypy>=0.920

[tool:pytest]
testpaths = tests

[flake8]
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 119

[isort]
profile = black
multi_line_output = 3

[mypy]
warn_unused_ignores = True
strict = True

[mypy-asgiref.current_thread_executor]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asgiref.local]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asgiref.sync]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asgiref.compatibility]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asgiref.wsgi]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asgiref.testing]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-asgiref.server]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_server]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_wsgi]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_testing]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_sync_contextvars]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_sync]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_local]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-test_compatibility]
disallow_untyped_defs = False
check_untyped_defs = False
